revamped database viewer, only showing first 100 rows when big tables but still drawing data correctly, also added column restretching if necessary should still add a new background

--- a/QT_GUI/LayoutCSS/Menu_button.css
+++ b/QT_GUI/LayoutCSS/Menu_button.css
@@ -227,3 +227,9 @@ border-radius: 10px;
 background-color:White;
 align:center;
 }}
+
+QTableView {{
+  background-color: green;
+  border: 1px solid #fff5cc;
+  border-radius: 5px;
+}}
